# ProjectBunny

./: .gitignore  3DMigotoDX12.code-workspace  CMakeLists.txt  CMakePresets.json  CMake迁移计划.md  README.md  StereovisionHacks.sln  _fix_hotpath.ps1  build_config.json  build_debug_x64.ps1  build_release_x64.ps1  util.cpp
.github/workflows/: zip-release.yml
BinaryDecompiler/: BinaryDecompiler.vcxproj
D3DCompiler_46/: D3DCompiler_46.vcxproj
D3D_Shaders/: D3D_Shaders.vcxproj
DirectX11/: D3D11Wrapper.cpp  DirectX11.vcxproj  DirectX11.vcxproj.filters  HackerDevice.cpp  HackerDevice.h  IniHandler.h  d3d11Wrapper.def  input.h
Injector/: Injector.vcxproj
InjectorLib/: Injector.cpp  InjectorLib.vcxproj
adr/: 0001-dx12-safe-mode-opt-in.md  0002-dx12-textureoverride-commandlist-trigger.md  0003-dx12-shaderregex-commandlist-scope.md  0004-dx12-command-list-textureoverride-lookup-cache.md  0005-dx12-command-list-executor-snapshots.md
cmake/: CompilerOptions.cmake  FindNektra.cmake
docs/: DX12_DefaultHotPath_Performance.md  DX12_ModActivation.md  DX12_PreSkinning_Diagnosis.md  DX12_ShaderRegex_CommandListTrigger.md  DX12_TextureOverride_CommandListTrigger.md  Dev提示词.md  DirectXGI.md  dx12-mod-support-plan.md  仓库协作规范.md  编码规范.md  项目架构说明.md
scripts/: build-all.ps1  build-cmake.ps1
src/BinaryDecompiler/: CMakeLists.txt
src/Core/: CMakeLists.txt  IniDocument.cpp  IniDocument.h  MigotoCommandList.cpp  MigotoCommandList.h  MigotoConfig.cpp  MigotoConfig.h  MigotoIniLoader.cpp  MigotoIniLoader.h  MigotoResource.cpp  MigotoResource.h  MigotoShaderOverride.cpp  MigotoShaderOverride.h  MigotoShaderRegex.cpp  MigotoShaderRegex.h  MigotoTextureOverride.cpp  MigotoTextureOverride.h
src/D3DCompiler_46/: CMakeLists.txt  D3DCompiler_46.def
src/D3D_Shaders/: CMakeLists.txt
src/DirectX11/: CMakeLists.txt  CommandList.h  D3D11Wrapper.h  DirectX11.rc  HackerDXGI.h  IniHandler.cpp  Override.cpp  Override.h  ShaderRegex.cpp  globals.h  lock.cpp
src/DirectX12/: CMakeLists.txt  D3D12Wrapper.cpp  D3D12Wrapper.h  DX12BindingTracker.cpp  DX12BindingTracker.h  DX12BindingTrackerFrameExport.cpp  DX12BindingTrackerPrivate.h  DX12BindingTrackerResourceExport.cpp  DX12CommandListCommandRecorder.cpp  DX12CommandListCommandRecorder.h  DX12CommandListComputeBindings.cpp  DX12CommandListHooks.cpp  DX12CommandListHooks.h  DX12CommandListLifecycle.cpp  DX12CommandListLifecycle.h  DX12CommandListRuntime.cpp  DX12CommandListRuntime.h  DX12CommandListStateCapture.cpp  DX12CommandListStateCapture.h  DX12DeviceHooks.cpp  DX12DeviceHooks.h  DX12DispatchHookFlow.cpp  DX12DispatchHookFlow.h  DX12DrawHookFlow.cpp  DX12DrawHookFlow.h  DX12FrameAnalysis.cpp  DX12FrameAnalysis.h  DX12FrameAnalysisManifest.cpp  DX12HookManager.cpp  DX12IaReplacementExecutor.cpp  DX12IaReplacementExecutor.h  DX12Input.cpp  DX12Json.cpp  DX12Json.h  DX12ModRuntime.cpp  DX12ModRuntime.h  DX12ModRuntimeCommandLists.cpp  DX12ModRuntimeIaMatch.cpp  DX12ModRuntimeIaRuntime.cpp  DX12ModRuntimeLoad.cpp  (+26 more)
src/DirectXGI/: CMakeLists.txt
src/HLSLDecompiler/: CMakeLists.txt
src/Injector/: CMakeLists.txt
src/InjectorLib/: CMakeLists.txt
src/common/: util.h
test_mod_dx12_zzz/KeFuLiuYin/: KeFUY.ini
test_mod_dx12_zzz/KeFuLiuYin/Meshes/: LOD0.dffb91a3-0-Index.buf  dffb91a3-Blend.buf  dffb91a3-Position.buf  dffb91a3-Texcoord.buf
zaychik/: __init__.py
zaychik/common/: properties.py
zaychik/ui/: operators.py  panel.py
zaychik/utils/: importer.py  parser.py  paths.py  trace.py
